--- a/package.json
+++ b/package.json
@@ -9,9 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.4",
+    "@emotion/react": "^11.4.0",
+    "@heroicons/react": "^1.0.3",
+    "apollo-link-context": "^1.0.20",
+    "autoprefixer": "^10.3.1",
+    "formik": "^2.2.9",
+    "graphql": "^15.5.1",
     "next": "11.0.1",
+    "node-fetch": "^2.6.1",
+    "postcss": "^8.3.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-select": "^4.3.1",
+    "react-spinners": "^0.11.0",
+    "recharts": "^2.0.10",
+    "sweetalert2": "^11.1.2",
+    "tailwindcss": "^2.2.7",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "eslint": "7.32.0",
