--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@heroicons/react": "^1.0.3",
     "apollo-link-context": "^1.0.20",
     "autoprefixer": "^10.3.1",
+    "bcryptjs": "^2.4.3",
     "formik": "^2.2.9",
     "graphql": "^15.5.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "11.0.1",
     "node-fetch": "^2.6.1",
     "postcss": "^8.3.6",
